ingress.yaml
apiVersion: networking.k8s.io/v1
kind: "Ingress"
metadata: 
  name: "local-delivery-ingress"
  annotations: 
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingressclass.kubernetes.io/is-default-class: "true"
spec: 
  ingressClassName: nginx
  rules: 
    - host: ""
      http: 
        paths: 
          - path: /orders
            pathType: Prefix
            backend: 
              service:
                name: order
                port:
                  number: 8080
          - path: /payments
            pathType: Prefix
            backend: 
              service:
                name: pay
                port:
                  number: 8080
          - path: /orders
            pathType: Prefix
            backend: 
              service:
                name: store
                port:
                  number: 8080
